--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ button {
   fill: #f4f4fd;
 }
 
-/* ==================== Tablet (768px) ==================== */
+/* ==================== TABLET ==================== */
 @media screen and (min-width: 768px) {
   .team-list {
     flex-direction: row;
@@ -538,7 +538,7 @@ button {
   }
 }
 
-/* ==================== Desktop (1158px) ==================== */
+/* ==================== DESKTOP ==================== */
 @media screen and (min-width: 1158px) {
   .our-crew-container {
     width: 1158px;
