--- a/css/styles.css
+++ b/css/styles.css
@@ -559,14 +559,37 @@ button {
 /* ===================================PORTFOLIO================================== */
 
 .portfolio {
-  padding: 120px 0;
+  padding: 96px 0;
+}
+
+.portfolio-container {
+  max-width: 1158px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  flex-direction: column;
+  gap: 48px;
+  align-items: center;
+}
+
+.portfolio-list-item {
+  width: 100%;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-img {
@@ -574,31 +597,41 @@ button {
   overflow: hidden;
 }
 
+.portfolio-list-img img {
+  width: 100%;
+  height: auto;
+}
+
 .portfolio-img-description {
   position: absolute;
-  font-weight: 400;
   top: 0;
+  left: 0;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  height: 100%;
   width: 100%;
+  height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  text-transform: capitalize;
-  color: #2e2f42;
-  margin-bottom: 72px;
+.portfolio-list-item:hover .portfolio-img-description {
+  transform: translateY(0%);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.list-div-item {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .portfolio-list-title {
@@ -618,24 +651,39 @@ button {
   color: #434455;
 }
 
-.list-div-item {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
+/* ======================TABLET ================== */
+
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 72px 24px;
+  }
+
+  .portfolio-list-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+
+  .portfolio {
+    padding: 96px 0;
+  }
 }
 
-.portfolio-list-item {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+/* ==========================DESKTOP====================== */
 
-.portfolio-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+@media screen and (min-width: 1158px) {
+  .portfolio-list {
+    gap: 24px;
+  }
 
-.portfolio-list-item:hover .portfolio-img-description {
-  transform: translateY(0%);
+  .portfolio-list-item {
+    flex-basis: calc((100% - 48px) / 3);
+  }
+
+  .portfolio {
+    padding: 120px 0;
+  }
 }
 
 /* ==================Footer============== */
