--- a/css/styles.css
+++ b/css/styles.css
@@ -190,9 +190,9 @@ button {
 
   .contact-list-item-link {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -221,6 +221,12 @@ button {
 
   .logo {
     margin-right: 76px;
+  }
+
+  .contact-list-item-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
 
   .contact-list {
