--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ button {
   .contact-list-item-link {
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
   }
 
   .contact-list {
@@ -590,11 +590,9 @@ button {
   font-weight: 700;
   font-size: 28px;
   line-height: 1.11;
-  letter-spacing: 0.02em;
   text-align: center;
-  text-transform: capitalize;
-  color: #2e2f42;
   margin-bottom: 72px;
+  color: #2e2f42;
 }
 
 .portfolio-list {
@@ -606,6 +604,7 @@ button {
 
 .portfolio-list-item {
   width: 100%;
+  max-width: 380px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -614,35 +613,29 @@ button {
   overflow: hidden;
 }
 
-.portfolio-list-img img {
+.portfolio-img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  display: block;
 }
 
 .portfolio-img-description {
   position: absolute;
   top: 0;
   left: 0;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
   width: 100%;
   height: 100%;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms ease-in-out;
 }
 
 .portfolio-list-item:hover .portfolio-img-description {
-  transform: translateY(0%);
-}
-
-.portfolio-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0);
 }
 
 .list-div-item {
@@ -652,23 +645,14 @@ button {
 }
 
 .portfolio-list-title {
-  font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+  font-weight: 500;
   margin-bottom: 8px;
 }
 
 .portfolio-list-text {
-  font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
 }
-
-/* ======================TABLET ================== */
 
 @media screen and (min-width: 768px) {
   .portfolio-list {
@@ -681,13 +665,18 @@ button {
   .portfolio-list-item {
     flex-basis: calc((100% - 24px) / 2);
   }
-
-  .portfolio {
-    padding: 96px 0;
-  }
 }
 
-/* ==========================DESKTOP====================== */
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .portfolio-list {
+    justify-content: center;
+    gap: 72px 24px;
+  }
+
+  .portfolio-list-item {
+    flex: 0 0 336px;
+  }
+}
 
 @media screen and (min-width: 1158px) {
   .portfolio-list {
