--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ button {
 /* =========================Header ===========================*/
 /* ==========================Logo============================ */
 .container {
-  min-width: 320px;
+  width: 320px;
   padding-left: 16px;
   padding-right: 16px;
   margin: 0 auto;
@@ -259,7 +259,7 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100%;
+  /* width: 100%; */
   text-align: center;
   padding: 72px 0;
 }
@@ -726,6 +726,8 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+
+  width: 264px;
 }
 
 .social-media {
@@ -926,13 +928,21 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 4px;
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
 }
 
 .close-button {
@@ -1032,7 +1042,7 @@ button {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
-  width: 360px;
+  width: 100%;
   height: 120px;
   padding: 8px 16px;
   outline: transparent;
@@ -1110,3 +1120,115 @@ button {
 
 /* ============================= SUBMIT BUTTON ============================= */
 /*============================ /MODAL-CHECKBOX ============================= */
+
+/* ================================MOB-MENU========================== */
+
+@media screen and (max-width: 767px) {
+  .mob-menu-container {
+    padding-top: 24px;
+  }
+
+  .mob-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mob-menu.is-open {
+    transform: translateX(0%);
+  }
+
+  .mob-menu-close-icon {
+    fill: #2e2f42;
+  }
+
+  .mob-menu-close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    transition: color;
+    margin-left: auto;
+    margin-bottom: 24px;
+  }
+
+  .mob-menu-close-button:hover,
+  .mob-menu-close-button:focus {
+    background-color: #404bbf;
+    border: none;
+  }
+
+  .mob-menu-close-button:focus .mob-menu-close-icon,
+  .mob-menu-close-button:hover .mob-menu-close-icon {
+    fill: #ffffff;
+  }
+
+  /* =========================MOB-MENU-NAV====================== */
+
+  .mob-menu-soc-list-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu-soc-list-link:hover,
+  .mob-menu-soc-list-link:focus {
+    color: #404bbf;
+  }
+
+  .mob-menu-soc-list-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .mob-menu-nav {
+    margin-bottom: 168px;
+  }
+
+  /* ========================MOB-MENU-ADRESS==================== */
+
+  .menu-adrs-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
+    color: #434455;
+    font-style: normal;
+  }
+
+  .menu-adrs-link:hover,
+  .menu-adrs-link:focus {
+    color: #404bbf;
+  }
+
+  .menu-adrs-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  .menu-adrs {
+    margin-bottom: 48px;
+  }
+
+  /* ========================MOB-MENU-ICON-LIST==================== */
+
+  .mob-social-list-icon {
+    gap: 40px;
+  }
+}
+
+/* ================================/MOB-MENU========================== */
