--- a/css/styles.css
+++ b/css/styles.css
@@ -243,8 +243,10 @@ button {
 /* ================================= MAIN ================================== */
 /* ================================= HERO ================================== */
 
-.order {
+.order-container {
   max-width: 440px;
+}
+.order {
   margin-left: auto;
   margin-right: auto;
   background-color: #2e2f42;
@@ -299,6 +301,10 @@ button {
 /* =================================TABLET================================== */
 
 @media screen and (min-width: 768px) {
+  .order-container {
+    min-width: 768px;
+  }
+
   .order {
     max-width: 768px;
     background-image: linear-gradient(
@@ -324,6 +330,10 @@ button {
 /* ==================================DESKTOP================================== */
 
 @media screen and (min-width: 1158px) {
+  .order-container {
+    min-width: 1158px;
+  }
+
   .order {
     max-width: 1440px;
     background-image: linear-gradient(
@@ -937,14 +947,6 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .modal {
-    width: 408px;
-    min-height: 584px;
-    padding: 72px 24px 24px 24px;
-  }
-}
-
 .close-button {
   position: absolute;
   top: 24px;
@@ -1119,6 +1121,22 @@ button {
 .submit-button:hover,
 .submit-button:focus {
   background: #404bbf;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
+
+  .empty-checkbox {
+    transform: translateY(0px);
+  }
+
+  .privacy-link {
+    margin-left: 0;
+  }
 }
 
 /* ============================= SUBMIT BUTTON ============================= */
