--- a/css/styles.css
+++ b/css/styles.css
@@ -119,12 +119,14 @@ button {
   display: flex;
   width: 24px;
   height: 24px;
+  background-color: transparent;
 }
 
 .burger-button:hover,
 .burger-button:focus {
   fill: #404bbf;
 }
+
 /* =================================TABLET================================== */
 
 @media screen and (min-width: 768px) {
@@ -354,10 +356,13 @@ button {
 /* ==================================/DESKTOP================================== */
 /* ================================= /HERO ================================== */
 /* ================================= ABOUT-US ================================== */
-.about-us-container {
-  width: 320px;
+.about-us {
   padding-top: 96px;
   padding-bottom: 96px;
+}
+
+.about-us-container {
+  width: 320px;
 }
 
 .about-us-list {
@@ -887,6 +892,7 @@ button {
     align-items: baseline;
     justify-content: center;
     width: 1158px;
+    gap: 0;
   }
 
   .footer-description {
@@ -1144,112 +1150,115 @@ button {
 
 /* ================================MOB-MENU========================== */
 
-@media screen and (max-width: 767px) {
-  .mob-menu-container {
-    padding-top: 24px;
-  }
-
-  .mob-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999999;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .mob-menu.is-open {
-    transform: translateX(0%);
-  }
-
-  .mob-menu-close-icon {
-    fill: #2e2f42;
-  }
-
-  .mob-menu-close-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: transparent;
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    transition: color;
-    margin-left: auto;
-    margin-bottom: 24px;
-  }
-
-  .mob-menu-close-button:hover,
-  .mob-menu-close-button:focus {
-    background-color: #404bbf;
-    border: none;
-  }
-
-  .mob-menu-close-button:focus .mob-menu-close-icon,
-  .mob-menu-close-button:hover .mob-menu-close-icon {
-    fill: #ffffff;
-  }
-
-  /* =========================MOB-MENU-NAV====================== */
-
-  .mob-menu-soc-list-link {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 111%;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mob-menu-soc-list-link:hover,
-  .mob-menu-soc-list-link:focus {
-    color: #404bbf;
-  }
-
-  .mob-menu-soc-list-item:not(:last-child) {
-    margin-bottom: 40px;
-  }
-
-  .mob-menu-nav {
-    margin-bottom: 168px;
-  }
-
-  /* ========================MOB-MENU-ADRESS==================== */
-
-  .menu-adrs-link {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    color: #434455;
-    font-style: normal;
-  }
-
-  .menu-adrs-link:hover,
-  .menu-adrs-link:focus {
-    color: #404bbf;
-  }
-
-  .menu-adrs-item:not(:last-child) {
-    margin-bottom: 24px;
-  }
-
-  .menu-adrs {
-    margin-bottom: 48px;
-  }
-
-  /* ========================MOB-MENU-ICON-LIST==================== */
-
-  .mob-social-list-icon {
-    gap: 40px;
-  }
+.mob-menu-container {
+  padding-top: 24px;
 }
 
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999999;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu.is-open {
+  transform: translateX(0%);
+}
+
+.mob-menu-close-icon {
+  fill: #2e2f42;
+}
+
+.mob-menu-close-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: color;
+  margin-left: auto;
+  margin-bottom: 24px;
+}
+
+.mob-menu-close-button:hover,
+.mob-menu-close-button:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.mob-menu-close-button:focus .mob-menu-close-icon,
+.mob-menu-close-button:hover .mob-menu-close-icon {
+  fill: #ffffff;
+}
+
+/* =========================MOB-MENU-NAV====================== */
+
+.mob-menu-soc-list-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-soc-list-link:hover,
+.mob-menu-soc-list-link:focus {
+  color: #404bbf;
+}
+
+.mob-menu-soc-list-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mob-menu-nav {
+  margin-bottom: 168px;
+}
+
+/* ========================MOB-MENU-ADRESS==================== */
+
+.menu-adrs-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #434455;
+  font-style: normal;
+}
+
+.menu-adrs-link:hover,
+.menu-adrs-link:focus {
+  color: #404bbf;
+}
+
+.menu-adrs-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.menu-adrs {
+  margin-bottom: 48px;
+}
+
+/* ========================MOB-MENU-ICON-LIST==================== */
+
+.mob-social-list-icon {
+  gap: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
 /* ================================/MOB-MENU========================== */
