--- a/css/styles.css
+++ b/css/styles.css
@@ -1213,8 +1213,8 @@ button {
   color: #2e2f42;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mob-menu-soc-list-link:hover,
-.mob-menu-soc-list-link:focus {
+
+.mob-menu-soc-list-item:first-child .mob-menu-soc-list-link {
   color: #404bbf;
 }
 
@@ -1237,8 +1237,7 @@ button {
   font-style: normal;
 }
 
-.menu-adrs-link:hover,
-.menu-adrs-link:focus {
+.menu-adrs-item:first-child .menu-adrs-link {
   color: #404bbf;
 }
 
